--- a/day11/homework/hw2.html
+++ b/day11/homework/hw2.html
@@ -1,55 +1,38 @@
 <head>
+    <title>pet shop</title>
 
-    <title>my website pet shop</title>
 </head>
 
 
+
+
 <body>
-    
 
-    <strong>hello to my first pet shop</strong>
 
+
+    <h2>CAT</h2>
+    <img src="cat.jpeg" alt="">
+    <p>this is cat and its 50% off</p>
+    <button>BUY NOW</button>
+
+
+
+
+    <h2>DOG</h2>
     <img src="dog.jpeg" alt="">
+    <p>this is dog which is really cute its 90 % off</p>
+    <button>BUY NOW</button>
 
-    <p>this is first dog</p>
-<em>to buy click here ></em>
-<button>BUY NOW</button>
+    <h2>LION</h2>
+    <img src="lion.jpeg" alt="">
+    <p>this is lion and you can buy there photo it wil be 100000 $</p>
+    <button>BUY NOW</button>
 
-
-
-
-
-
-<strong>this is cat which you can agree is really cute</strong>
-
-<img src="cat.jpeg" alt="">
-
-<em>click here to buy this ></em>
-
-
-
-<button>CLICK HERE TO BUY</button>
-
-
-
-
-<img src="" alt="">
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+    <h2>SNAKE</h2>
+    <img src="snake.jpeg" alt="">
+    <p>this is snake which includes women for only 10k $</p>
+    <em>you are paying in cash </em>
+    <button>BUY ONE GET ONE FREE CKICK</button>
 
 
 
