--- a/day11/homework/hw2.html
+++ b/day11/homework/hw2.html
@@ -25,7 +25,7 @@
 
     <h2>LION</h2>
     <img src="lion.jpeg" alt="">
-    <p>this is lion and you can buy there photo it wil be 100000 $</p>
+    <p>this is lion and you can buy there photo, <br> it wil be 100000 $</p>
     <button>BUY NOW</button>
 
     <h2>SNAKE</h2>
