--- a/day11/homework/hw2.html
+++ b/day11/homework/hw2.html
@@ -12,7 +12,7 @@
 
     <h2>CAT</h2>
     <img src="cat.jpeg" alt="">
-    <p>this is cat and its 50% off</p>
+    <p>this is cat, <br> its 50% off</p>
     <button>BUY NOW</button>
 
 
