--- a/day21/homework/hw1.html
+++ b/day21/homework/hw1.html
@@ -1,10 +1,27 @@
-<head>
-    <title>registration form</title>
-</head>
 
+<html>
 <body>
-    <center><h1>Registration form</h1></center>
+    <h2>registration form</h2>
+<form>
+    <label for="name">First Name</label>
+    <input type="text" id="name" name="name"><br><br>
+    <label for="lastname">Last Name</label>
+    <input  id="lastname" type="text"><br><br>
+    <label for="nickname">Nickname</label>
+    <input id="nickname" type="text"><br><br>
+    <label for="email">e-mail</label>
+    <input  id = "email" type="email"><br><br>
+    <label  for="password">Password</label>
+    <input id = "password" type="password"><br><br>
+    <label for="dateofbirth">Date of Birth</label>
+    <input id ="dateofbirth" type="date"><br><br>
+    
+    
 
 
 
+
+</form>
 </body>
+</html>
+
