--- a/day21/homework/hw1.html
+++ b/day21/homework/hw1.html
@@ -14,8 +14,31 @@
     <label  for="password">Password</label>
     <input id = "password" type="password"><br><br>
     <label for="dateofbirth">Date of Birth</label>
-    <input id ="dateofbirth" type="date"><br><br>
+    <input id ="dateofbirth" type="text" ><br><br>
+    <p>gender: </p>
+    <label for="gender"> male</label>
+    <input type="radio" id="gender" name="male" >
+    <label for="gender">female</label>
+    <input type="radio" id="gender" name="male" ><br><br>
+
+
+
+    <label for="name">first name:</label>
+    <input type="text" id="name"><br><br>
+    <label for="lastname">last name:</label>
+    <input type="text" name="lastname" id="lastname"><br>
+    <p>gender: </p>
+    <label for="gender"> male</label>
+    <input type="radio" id="gender" name="male" >
+    <label for="gender">female</label>
+    <input type="radio" id="gender" name="male" ><br><br>
+    <label for="email">E-mail: </label>
+    <input type="email" id = "email"><br><br>
+    <label for="dateofbirth">dateofbirth: </label>
+    <input type="date" id="dateofbirth">
+
     
+
     
 
 
