--- a/day23/classwork/cw1.html
+++ b/day23/classwork/cw1.html
@@ -11,7 +11,7 @@
     </select>
 
     <h2>REGISTRATION FORM</h2>
-
+    <form >
     <label for="fname">
         ENTER YOUR FIRST NAME: 
     </label>
@@ -39,8 +39,7 @@
         <option value="LO">LOUIS</option>
     </select><br>
     <input type="submit" value="Submit">
-       
-
+       </form>
 
 
 </body>
