--- a/day26/classwork/cw1.html
+++ b/day26/classwork/cw1.html
@@ -1,6 +1,6 @@
 <head>
     <title>
-        sdsdsd
+        MY
     </title>
 </head>
 
@@ -11,6 +11,7 @@
         <source src="video.mp4" type="video/mp4">
         <source src="video.ogg" type="video/ogg">
         <source src="video.webm" type="video/webm">
+        <source src="video.AVI" type="video/AVI">
 
 
 
