--- a/day26/homework/hw1.html
+++ b/day26/homework/hw1.html
@@ -23,8 +23,10 @@
 
 
     <nav>
-        <a href="spain.html">SPAIN</a>
-        <a href="georgia.html">GEORGIA</a>
-        <a href="turqey.html">TURKEY</a>
+        <a href="spain.html">SPAIN</a><br>
+        <a href="georgia.html">GEORGIA</a><br>
+        <a href="turqey.html">TURKEY</a><br>
+        <a href="portugal.html">PORTUGAL</a><br>
+        <a href="">BRAZIL</a>
     </nav>
 </body>
