--- a/day33/hhomework/hw2.html
+++ b/day33/hhomework/hw2.html
@@ -29,7 +29,11 @@
         <section id="yamaha">
           <h1>YAMAHA r1</h1>  <br>
           <p>The Yamaha R1 is one of the most famous sportbikes in the world. It has a 998cc inline-four engine that produces very high power and speed. The design comes from Yamaha’s MotoGP race bikes,<br> which makes it great for racing and track riding. It has advanced electronics like traction control and quick-shifter for smooth gear changes.</p><br>
-          <img src="yamahar1.jfif" alt="" >
+          <img src="yamahar1.jfif" alt="" ><br>
+
+          <button>
+                BUY
+            </button>
         </section>
 
 
@@ -37,7 +41,13 @@
 
             <h1>cbr600rr</h1><br>
             <p>The Honda CBR600RR is known for being smooth, light, and very easy to handle. It has a 599cc engine that gives strong acceleration and great balance. This motorcycle is popular among both beginner and experienced riders. It’s also very reliable and used often in middleweight racing.</p><br>
-            <img src="CBR600RR.jfif" alt="" >
+            <img src="CBR600RR.jfif" alt="" ><br>
+            
+         <button>
+                BUY
+            </button>
+        </section>
+
 
 
 
@@ -51,7 +61,12 @@
             <p>The Ninja ZX-10R is a powerful superbike made for high-speed performance. It has a 1000cc engine and advanced features like launch control and riding modes. Kawasaki uses technology from its racing team,<br> which makes this bike very fast and stable on curves.</p>
 
 
-            <img src="zx10r.jfif" alt="">
+            <img src="zx10r.jfif" alt=""><br>
+            <button>
+                BUY
+            </button>
+        </section>
+
         </section>
 
 
@@ -60,7 +75,10 @@
 
             <p>The Suzuki Hayabusa is famous for its speed and power. It has a large 1340cc engine that can go over 300 km/h in older versions. Even though it’s very powerful, it’s also comfortable for long rides. <br> The Hayabusa has become a legend in motorcycle history because of its amazing performance and unique design.</p>
 
-            <img src="Suzuki Hayabusa.jfif" alt="">
+            <img src="Suzuki Hayabusa.jfif" alt=""><br>
+         <button>
+                BUY
+            </button>
 
 
         </section>
@@ -74,7 +92,13 @@
             <p>The BMW R1250 GS Adventure is a perfect motorcycle for traveling long distances and exploring off-road. It has a 1254cc engine with a special “Boxer” design that gives strong torque. Riders love it for its comfort, big fuel tank, and advanced safety systems. <br>It’s one of the most popular touring bikes in the world.</p>
 
 
-            <img src="BMW R1250 GS Adventure.jfif" alt="">
+            <img src="BMW R1250 GS Adventure.jfif" alt=""><br>
+        
+            <button>
+                BUY
+            </button>
+        </section>
+
         </section>
 
 
