--- a/day37/hhomework/hw1.html
+++ b/day37/hhomework/hw1.html
@@ -121,6 +121,31 @@
     <td>12:00 p.m.</td>
     <td align="center">XSL Formatting Objects</td>
   </tr>
+</table><br><br><br>
+
+
+<table border="1" align="center">
+  <tr>
+    <th>Roll_no</th>
+    <th>Name</th>
+    <th>Total marks</th>
+    <th>Grade</th>
+  </tr>
+  <tr>
+    <td>1</td>
+    <td>khan</td>
+    <td>500</td>
+    <td>B</td>
+
+  </tr>
+  <tr>
+    <td>2</td>
+    <td>Nazia</td>
+    <td>850</td>
+    <td>A+</td>
+
+  </tr>
+
 </table>
 
 </body>
