--- a/day39/homework/hw1.html
+++ b/day39/homework/hw1.html
@@ -23,6 +23,9 @@
 
       <!-- style airs css erterti forma romlitac shegvidzlia saiti gavalamazod maggalitad font size romelic aregulirebs teqstit sigrdzes color romelic garchevinebs fers  -->
 
+      <h1 style="font-size: 10px; color: blue;">hi</h1>
+      <p style="font-size: 100px; color: red;">bbaro</p>
+
       
     </main>
 </body>
