--- a/day39/homework/hw2.html
+++ b/day39/homework/hw2.html
@@ -4,17 +4,19 @@
 </head>
 <body>
 
-<h1>პროგრამირება როგორც პროფესია</h1>
+<h1 style="color: purple;">პროგრამირება როგორც პროფესია</h1>
 
 <p style="font-size: 25px;">პროგრამირება არის მომავლის ერთ-ერთი ყველაზე მოთხოვნადი პროფესია.</p>
 <p style="font-size: 25px;">პროგრამისტები ქმნიან ვებსაიტებს, თამაშებს და პროგრამებს.</p>
 <p style="font-size: 25px;">ეს პროფესია გაძლევს უამრავ შესაძლებლობას განვითარებისთვის.</p>
 
+<img src="pro.jfif" alt="">
+
 
 <br><br>
 
-<button>დაწყება</button>
-<button>გაიგე მეტი</button>
+<button style="color: yellow; font-size: 20px;">დაწყება</button>
+<button style="color: yellow; font-size: 20px;">გაიგე მეტი</button> 
 
 </body>
 
