--- a/day39/homework/hw2.html
+++ b/day39/homework/hw2.html
@@ -4,7 +4,7 @@
 </head>
 <body>
 
-<h1 style="color: purple;">პროგრამირება როგორც პროფესია</h1>
+<h1 style="color: purple; font-size: 60px;">პროგრამირება როგორც პროფესია</h1>
 
 <p style="font-size: 25px;">პროგრამირება არის მომავლის ერთ-ერთი ყველაზე მოთხოვნადი პროფესია.</p>
 <p style="font-size: 25px;">პროგრამისტები ქმნიან ვებსაიტებს, თამაშებს და პროგრამებს.</p>
