--- a/day43/hhomework/hw1.html
+++ b/day43/hhomework/hw1.html
@@ -7,7 +7,7 @@
 <body>
     
     <main>
-        <div style="background-color: rgb(12, 255, 93); width: 3px; font-size: 4px; border: 40px solid red;">
+        <div style="background-color: rgb(12, 255, 93); width: 300px; font-size: 4px; border: 40px solid red; color: black;">
             <button>BUY</button>
             <h1>HELLO</h1>
             <p>HELLO</p>
