--- a/GOA/REGIGSTER.html
+++ b/GOA/REGIGSTER.html
@@ -14,7 +14,7 @@
 
 <form action="homepage.html">
   <label for="username" style="color: green; font-size: 30px; position: relative; left: 42%;">Username:</label>
-  <input type="text" id="username" name="username"  placeholder="text" required style=" position: relative; left: 42%;">
+  <input type="text" id="username" name="username"  placeholder="Text" required style=" position: relative; left: 42%;">
   <br><br>
 
   <label for="password" style="color: green; font-size: 30px;  position: relative; left: 42%;">Password:</label>
@@ -22,7 +22,7 @@
   <br><br>
 
   <label for="email" style="color: green; font-size: 30px; position: relative; left: 42%;">Email:</label>
-  <input type="email" id="email" name="email" placeholder="email" required style=" position: relative; left: 42%;">
+  <input type="email" id="email" name="email" placeholder="E-mail" required style=" position: relative; left: 42%;">
   <br><br>
 
   <label style="color: green; font-size: 30px;  position: relative; left: 42%;" >Gender:</label>
@@ -32,8 +32,6 @@
   <input type="radio" id="female" name="gender" value="female" required style=" position: relative; left: 42%;">
   <label for="female" style="color: green; font-size: 30px;  position: relative; left: 42%;" >Female</label>
 
-  <input type="radio" id="other" name="gender" value="others" required   style=" position: relative; left: 42%;">
-  <label for="other" style="color: green; font-size: 30px; position: relative; left: 42%;" >Other</label>
   <br><br>
 
   <label for="phone" style="color: green; font-size: 30px;   position: relative; left: 42%;" >Phone:</label>
@@ -43,24 +41,12 @@
     <label for=""> phone number</label>
     <option value="+995" style="color: green; font-size: 30px;">+995</option>
   </select>
-  <input type="tel" id="phone" name="phone" placeholder="tel" required style=" position: relative;  left: 42%;">
+  <input type="tel" id="phone" name="phone" placeholder="TEL" required style=" position: relative;  left: 42%;">
+
+  
 
 
-  <br><br>
-   <select name="აირჩიეთ კურსი" id="აირჩიეთ კურსი" style=" position: relative;  left: 46%;" placeholder="აირჩიეთ კურსი" required>
-    <option value="აირჩიეთ კურსი" selected  placeholder="აირჩიეთ კურსი" required> აირჩიეთ კურსი</option>
-    <option value="cybersecurity">cybersecurity</option>
-    <option value="game development">game development</option>
-    <option value="mma">mma</option>
-    <option value="robotics">robotics</option>
-    <option value="web development">web development</option>
-
-  </select>
-
-
-
-
-    <button type="submit font-size: 30px;" style=" position: relative;  left: 42%; top: 30px;">Register</button>
+    <button type="submit font-size: 30px;" style=" position: relative;  left: 31%; top: 30px;">Register</button>
 
 
 </a>
