--- a/GOA1/samegrelo/samgerelo.html
+++ b/GOA1/samegrelo/samgerelo.html
@@ -10,6 +10,9 @@
         
          <p style="color: white; font-size: 15px;  ">უძველესი სიმაგრეები • მწვანე ტყეები • მეგრული ტრადიციები</p>
          <a href="homepage.html" style="color: white; padding:8px 15px; border-radius:5px; margin-left: 1620px; background-color: transparent;">GO BACK</a>
+         
+        <a href="samegreloenglish.html" style="color: white; margin-left: 1620px ;  position: relative ; bottom: 50px;"> Eng </a>
+
 
     </header>
 
