--- a/day54/homework/hw1.html
+++ b/day54/homework/hw1.html
@@ -38,5 +38,42 @@
     </div>
 
 
+<div style="font-size:30px; color:blue; background-color:green; border:5px solid purple; text-align:center;">
+
+    <p>პარაგრაფი</p>
+
+    <p style="font-size:20px; color:yellow; background-color:blue; border:3px solid red; text-align:right;">
+    პარაგრაფი 
+    </p>
+
+    <p style="font-size:20px; color:yellow; background-color:blue; border:3px solid red; text-align:right;">
+    პარაგრაფი 3
+    </p>
+
+    <h1>სათაური</h1>
+
+    <h2 style="font-size:20px; color:yellow; background-color:blue; border:3px solid red; text-align:right;">
+    სათაური
+    </h2>
+
+    <h3>სათაური</h3>
+
+    <button>ღილაკი</button>
+
+    <button style="font-size:20px; color:yellow; background-color:blue; border:3px solid red; text-align:right">
+    ღილაკი
+    </button>
+
+    <button>ღილაკი</button>
+
+    <!-- inline css   rodesac css viyenebt atributshi tegis tavshi vwert styls-->
+    <!-- external css css fails vwert sruliad calke failshi  -->
+    <!-- ineternal css  style tegs vwert head tegshi da viwyebt css weras-->
+
+</div>
+
+
+
+
 
 </body>
