--- a/day57/homework/hw1.html
+++ b/day57/homework/hw1.html
@@ -7,6 +7,26 @@
     <title>Document</title>
 </head>
 <body>
+    <div style="font-size: 38px; color: blue; background-color: green; border: 3px red solid">
+        <p>hello guys</p>
+        <p>my name is saba</p>
+
+        <h2> HELLO GUYS</h2>
+        <h2> MY NAME IS SABA</h2>
+    </div> 
+
+    <div >
+        <p>HELLO  GUYS</p>
+        <p> MY NAME IS SABA</p>
+
+        <h2>HELLO GUYS MY NAME IS SABA</h2>
+        <h2>MY NAME IS SABA</h2>
+    </div>
+
+
+
+
+
     
 </body>
 </html>
